# LibreRoaster

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  TESTING_ARTISAN.md  TROUBLESHOOTING_GUIDE.md  UART_LOGGING_GUIDE.md  build-firmware.sh  build.rs  build.sh  config.template.json  diagram.json  flash.sh  rust-toolchain.toml  sdkconfig.defaults  validate.sh  wokwi.toml
.cargo/: config.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  comment-inventory.md  v1.7-MILESTONE-AUDIT.md  v2.0-ROADMAP.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-ARTISAN-TESTING.md  v1.0-REQUIREMENTS.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md  v1.8-REQUIREMENTS.md  v1.8-ROADMAP.md  v2.0-CODE_QUALITY_AUDIT.md  v2.0-REQUIREMENTS.md  v2.2-MILESTONE-AUDIT.md  v2.2-REQUIREMENTS.md  v2.2-ROADMAP.md
.planning/phases/01-parser-tests/: 01-01-PLAN.md  01-01-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-formatter-tests/: 02-01-PLAN.md  02-01-SUMMARY.md  02-formatter-tests-VERIFICATION.md
.planning/phases/03-integration-tests/: 03-01-PLAN.md  03-01-SUMMARY.md  03-01-VERIFICATION.md
.planning/phases/04-code-removal/: 04-01-PLAN.md  04-02-PLAN.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md
.planning/phases/05-trait-consolidation/: 05-01-SUMMARY.md
.planning/phases/06-warning-fixes/: 06-01-SUMMARY.md
.planning/phases/07-final-cleanup/: 07-01-SUMMARY.md
.planning/phases/08-command-hardening/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-command-hardening-VERIFICATION.md
.planning/phases/09-formatter-compliance/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-RESEARCH.md  09-formatter-compliance-VERIFICATION.md
.planning/phases/10-mock-uart-integration/: 10-01-PLAN.md  10-01-SUMMARY.md  10-RESEARCH.md  10-mock-uart-integration-VERIFICATION.md
.planning/phases/11-usb-cdc-verification/: 11-01-PLAN.md  11-02-PLAN.md  CONTEXT.md
.planning/phases/11-usb-verification/: 11-01-SUMMARY.md
.planning/phases/14-uart-driver-verification/: 14-CONTEXT.md
.planning/phases/17-initialization-handshake/: 17-01-PLAN.md  17-01-SUMMARY.md  17-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  code-quality-rust-RESEARCH.md
examples/: artisan_test.rs
internalDoc/: ARTISAN_CONNECTION.md  COMMAND_REFERENCE.md  FLASH_GUIDE.md  QUICKSTART.md
src/: config.rs  error.rs  led.rs  lib.rs  main.rs  server.rs  wifi.rs
src/application/: app_builder.rs  mod.rs  service_container.rs  tasks.rs
src/config/: constants.rs
src/control/: abstractions.rs  abstractions_tests.rs  command_handler.rs  handlers.rs  mod.rs  pid.rs  roaster.rs  roaster_refactored.rs  traits.rs
src/error/: app_error.rs
src/hardware/: board.rs  fan.rs  fan_host.rs  max31856.rs  mod.rs  pid.rs  shared_spi.rs  ssr.rs  usb_cdc_host.rs
src/input/: init_state.rs  mod.rs  multiplexer.rs  parser.rs
src/logging/: PERFORMANCE.md  channel.rs  drain_task.rs  mod.rs  tests.rs
src/output/: artisan.rs  manager.rs  mod.rs  scheduler.rs  serial.rs  traits.rs  uart.rs
src/server/: http.rs  mod.rs
static/: index.html
tests/: artisan_integration_test.rs  command_errors.rs  command_idempotence.rs  dual_channel_verification.md  mock_uart.rs  mock_uart_integration.rs  mock_usb_driver.rs  multiplexer_tests.rs  usb_cdc_tests.rs
(+76 files in other folders)
