[package]
edition      = "2021"
name         = "libreroaster"
rust-version = "1.88"
version      = "0.1.0"
description  = "OpenSource Coffee Bean Roaster compatible with Artisan+"
authors      = ["Juan Ángel López"]
license      = "APACHE-2"

[[example]]
name = "artisan_test"
path = "examples/artisan_test.rs"

[features]
default = []
std = ["embedded-hal-02"]
test = ["std"]
embedded = []

[[bin]]
name = "libreroaster"
path = "./src/main.rs"
required-features = ["embedded"]

[dependencies]
# Core dependencies - available for all targets
heapless         = "0.8.0"
embedded-hal     = "1.0.0"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.7", optional = true }
embedded-hal-bus = "0.2.0"
embedded-io       = "0.7.1"
embassy-time     = "0.5.0"
critical-section = "1.2.0"
static_cell      = "2.1.1"
log              = "0.4.27"
embassy-sync     = "0.6.1"

# Logging - esp_println for direct UART0 output

# ESP-specific dependencies - only for embedded target
[target.'cfg(target_arch = "riscv32")'.dependencies]
esp-hal = { version = "~1.0", features = ["esp32c3", "log-04", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c3",
  "log-04",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3", "log-04"] }
log                    = "0.4.27"

embassy-net = { version = "0.7.1", features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "tcp",
  "udp",
] }
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32c3",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32c3", "log-04"] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = ["log", "arch-riscv32"] }
riscv-rt = { version = "0.16.0" }
embassy-time = { version = "0.5.0", features = ["log"] }
esp-radio = { version = "0.17.0", features = [
  "esp-alloc",
  "esp32c3",
  "log-04",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
embassy-sync     = "0.6.1"



[dev-dependencies]
# Test dependencies
log = "0.4.27"
critical-section = "1.2.0"
static_cell      = "2.1.1"
embassy-sync = "0.6.1"




[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[lints.clippy]
# Embedded Rust clippy configuration for LibreRoaster
# See clippy.toml for detailed configuration

# Critical: deny unwrap, expect, and panic in production code
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

# Additional embedded-specific restrictions
dereference_copy_on_drop = "deny"
drop_copy = "deny"
dropping_references = "deny"
fallible_impl_from = "deny"

[lints.rust]
# Unsafe code linting via cargo-geiger
# Run: cargo geiger --all-targets
# See: .planning/phases/31-linting-audit/geiger-report.md
# Note: cargo-geiger doesn't integrate with [lints.rust] - use CLI instead


